--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-31  Scott James Remnant  <scott@netsplit.com>
+
+	* ltmain.sh: Infer tagged configuration for link mode with the
+	full compiler arguments available rather than only the first.
+
 2003-12-31  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* ltmain.sh: Quote $exec_cmd before it is eval'ed, so that
