--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-02  Peter O'Gorman  <peter@pogma.com>
 
+	* m4/libtool.m4: Ensure that ${ZSH_VERSION+set} is properly escaped.
+	
 	* m4/libtool.m4 (CDPATH): Change the CDPATH setting so that it
 	allows for zsh differences, as noted in the autoconf manual's
 	Portable Shell - Special Shell Variables section.
