--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-06  Gary V. Vaughan  <gary@gnu.org>
 
+	* libtoolize.in (func_scan_files): Don't assume the existence of
+	aclocal.m4.  Make the comment more descriptive.
+	Reported by Alexandre Duret-Lutz <adl@src.lip6.fr>
+
 	* NEWS: Note libtoolize changes.
 
 	* ChangeLog.2003: New file, containing all the ChangeLog entries
