--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-07  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.in (seen_gettext): Removed unused variable.
+
 2004-01-06  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.in (func_scan_files): Don't assume the existence of
