--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-08  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.in (func_copy_all_files): s/test "x/test "X/ to keep
+	tests/sh.test happy.
+
 2004-01-07  Gary V. Vaughan  <gary@gnu.org>
 
 	* Makefile.am (aclocal_macros, aclocal_DATA): Removed.
