--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.in: Break out of the command argument parse loop when
+	-- is encountered.
+
 2004-01-08  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.in (func_copy_all_files): s/test "x/test "X/ to keep
