--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-18  Benjamin Reed  <ranger@befunk.com>
+
+	* ltmain.in: Fix handling of frameworks in search paths.  Also
+	a one-liner fix to eval shrext in the libtool library search.
+
 2004-01-16  Gary V. Vaughan  <gary@gnu.org>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Require 1.8 for bootstrap, or
