--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-21  Peter O'Gorman  <peter@pogma.com>
+
+	* m4/libtool.m4 (AC_PROG_LD_RELOAD_FLAG): On darwin change the
+	reload_cmds to use $CC, otherwise ld will thin out any fat 
+	objects.
+
 2004-01-18  Benjamin Reed  <ranger@befunk.com>
 
 	* ltmain.in: Fix handling of frameworks in search paths.  Also
