--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-21  Nick Hudson  <skrll@netbsd.org>
+
+	* m4/libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER) [netbsd*]: Remove
+	gratuitous ${libname}${release}${shared_ext} from
+	library_names_spec.
+
 2003-11-12  Gary V. Vaughan  <gary@gnu.org>
 
 	The rules for uploading releases to gnu.org have been updated, and
