--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-23  Scott James Remnant  <scott@netsplit.com>
+
+	* ltmain.in: new -precious-files-regex link mode option
+	to prevent removal of matching files from the temporary
+	output directory.
+	(Debian Bug #221420)
+	* doc/libtool.texi: document the new option.
+	* NEWS: announce the new option.
+
 2004-01-22  Jeff Squyres  <jsquyres@lam-mpi.org>
 
 	* libtool.m4 (AC_LIBTOOL_PROG_CC_C_O): Some compilers (e.g. Intel
