--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-23  Scott James Remnant  <scott@netsplit.com>
 
+	* tests/demo-nopic.test: Skip test on hppa, which don't like
+	non-PIC shared libraries.
+
+2004-01-23  Scott James Remnant  <scott@netsplit.com>
+
 	* m4/libtool.m4  (AC_LIBTOOL_SYS_DYNAMIC_LINKER) [linux]: Include
 	directories found in /etc/ld.so.conf in sys_lib_dlsearch_path_spec.
 
