--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-23  James Henstridge  <james@daa.com.au>,
+	Scott James Remnant  <scott@netsplit.com>
+
+	* m4/libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [Linux]: Fix the
+	-export-symbols and -export-symbols-regex options.
+
 2004-01-23  Owen Taylor  <otaylor@redhat.com>
 	                                                                        
 	* m4/libtool.m4 (AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE): Recognise the
