--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-23  Kevin P. Fleming  <kpfleming@backtobasicsmgmt.com>
+	Charles Wilson <cygwin@cwilson.fastmail.fm>
+	                                                                        
+	* ltmain.in: include --tag options, if specified, in the
+	relink_command in uninstalled .la files.  Also, preserve --silent,
+	--debug options when libtool re-execs itself.
+	* NEWS: Updated.
+
 2004-01-23  James Henstridge  <james@daa.com.au>,
 	Scott James Remnant  <scott@netsplit.com>
 
