--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-23  Gary V. Vaughan  <gary@gnu.org>
+	                                                                        
+	* ltmain.in: Don't suppress output of PIC mode compile if
+	-no-suppress option is given.
+	* doc/libtool.texi (Invoking libtool): Document it.
+	* NEWS: Updated.
+
 2004-01-23  Scott James Remnant  <scott@netsplit.com>
 
 	* libltdl/ltdl.c (lt_dlerror): change return value when
