--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-23  Scott James Remnant  <scott@netsplit.com>
 
+	* libtool.m4: allow STRIP to contain spaces and additional
+	arguments.  (Debian Bug #183055)
+
+2004-01-23  Scott James Remnant  <scott@netsplit.com>
+
 	* m4/libtool.m4 (AC_DEPLIBS_CHECK_METHOD): Remove dead code
 	for platforms that have been using pass_all for some time now.
 
