--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* ltmain.in: Check for module_cmds if max_cmd_len is exceeded too.
 
 	* ltmain.in: Test $old_striplib before using it, not $striplib.
+
+	* ltmain.in: Move eval to after command separation to allow ~ in paths.
 	
 2004-01-23  Scott James Remnant  <scott@netsplit.com>
 
