--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,14 @@
 2004-01-25  Scott James Remnant  <scott@netsplit.com>
+
+	GNU libtool 1.5.2 was released.
+
+	* configure.ac: Bumped version to 1.5.2 in accordance with the
+	new versioning scheme.
+	* NEWS: updated.
+	* config.guess, config.sub, texinfo.tex:  Synchronized from
+	ftp.gnu.org.
+
+2004-01-25  Scott James Remnant  <scott@netsplit.com>
 	Gary V. Vaughan  <gary@gnu.org>
 
 	* Makefile.am: Update the maintainer rules against HEAD, I
